# SolGuard

./: .env-example  .gitignore  Architecture.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
backend/src/audit/: mod.rs
backend/src/rbac/: mod.rs
config/: ai_models.json
frontend/: .env-example  Dockerfile  README.md  nginx.conf  package.json
frontend/src/: App.tsx
frontend/src/components/: AIAnalysis.tsx  AnalysisHistory.tsx  CodeBlock.tsx  ModelConfigPanel.tsx  PrivateRoute.tsx  ProjectInfo.tsx  ProjectMetrics.tsx  SecurityPatternCard.tsx
frontend/src/components/AuditLog/: AuditLogList.tsx
frontend/src/components/UserManagement/: UserRoles.tsx
frontend/src/config/: index.ts
frontend/src/contexts/: RbacContext.tsx
frontend/src/pages/: AuditLogs.tsx  ProjectDetail.tsx
frontend/src/services/: aiService.ts  httpClient.ts
frontend/src/store/: index.ts
frontend/src/store/slices/: aiSlice.ts  analysisSlice.ts  authSlice.ts  projectsSlice.ts  rbacSlice.ts
migrations/: 20240101000000_initial_schema.sql  20240101000001_add_collaboration_features.sql  20240101000002_add_ai_features.sql  20240101000003_rbac.sql  20240101000004_audit_log.sql
src/: analyzer.rs  lib.rs  main.rs
src/ai/: mod.rs  model.rs
src/api/: ai.rs  analysis.rs  auth.rs
src/ci/: mod.rs
src/notifications/: mod.rs
src/rules/: custom.rs  mod.rs  ownership.rs
src/websocket/: mod.rs
