[package]
name = "solguard"
version = "0.1.0"
edition = "2021"
authors = ["SolGuard Team"]
description = "A comprehensive security analysis tool for Solana smart contracts"

[dependencies]
# Core dependencies
solana-program = "1.17"
anchor-lang = "0.28"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
anyhow = "1.0"
regex = "1.10"

# Web API dependencies
actix-web = "4.4"
actix-cors = "0.6"
actix-rt = "2.9"
actix-session = "0.7"
actix-identity = "0.5"
jsonwebtoken = "9.2"
bcrypt = "0.15"
validator = "0.16"
futures = "0.3"
tokio = { version = "1.35", features = ["full"] }

# Database dependencies
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.23", features = ["tokio-comp"] }

# Async runtime
async-trait = "0.1"
futures-util = "0.3"

# Testing
mockall = "0.12"
test-case = "3.3"
tokio-test = "0.4"

# Monitoring and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Security
ring = "0.17"
rand = "0.8"
base64 = "0.21" 